# hawkeye

./: .dockerignore  .gitignore  README.md  api.Dockerfile  api.yaml  index.html  worker.Dockerfile
.github/workflows/: release.yml  rust.yml
fixtures/: watcher-basic.json  watcher-multislate-bidirectional.json  watcher-multislate-forward-only.json  watcher-multislate.json  watcher-slate-fixture-1.json  watcher.json
hawkeye-api/: Cargo.toml
hawkeye-api/src/: backend.rs  config.rs  filters.rs  handlers.rs  main.rs  migrations.rs  templates.rs
hawkeye-core/: Cargo.toml
hawkeye-core/src/: config.rs  lib.rs  models.rs  utils.rs
hawkeye-worker/: Cargo.toml
hawkeye-worker/src/: actions.rs  config.rs  img_detector.rs  main.rs  metrics.rs  slate.rs  video_stream.rs
resources/slate_fixtures/: slate.xcf
