[package]
name = "hawkeye-api"
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"


[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kube = { version = "0.64.0", features = ["native-tls", "runtime"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
tokio = { version = "1.14", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.10", features = ["json"] }
prometheus = "0.10.0"
lazy_static = "1.4.0"
hawkeye-core = { path = "../hawkeye-core" }
anyhow = "1.0.32"
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7.3"
