[package]
name = "hawkeye-api"
version = "0.1.1"
authors = ["Rafael Caricio <rafael@caricio.com>", "Lyle Scott <lyle@ls3.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cbsinteractive/hawkeye"

[dependencies]
eyre = "0.6.5"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kube = { version = "0.65.0", features = ["native-tls", "runtime", "derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
tokio = { version = "1.14", features = ["full"] }
warp = { version = "0.3", default-features = false, features = ["tls"] }
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1.4.0"
hawkeye-core = { path = "../hawkeye-core" }
anyhow = "1.0.51"
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.7.3"
