[package]
name = "hawkeye-api"
version = "0.2.0"
authors = ["Rafael Caricio <rafael@caricio.com>", "Lyle Scott <lyle@ls3.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cbsinteractive/hawkeye"

[dependencies]
anyhow = "1.0"
eyre = "0.6"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kube = { version = "0.67.0", features = ["native-tls", "runtime"] }
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_22"]}
tokio = { version = "1.16.1", features = ["full"] }
warp = { version = "0.3", default-features = false }
reqwest = { version = "0.10", features = ["json"] }
lazy_static = "1.4.0"
hawkeye-core = { path = "../hawkeye-core" }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7.3"
