[package]
name = "hawkeye-core"
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/cbsinteractive/hawkeye"


[dependencies]
log = "0.4"
color-eyre = "0.5"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.2"

[dependencies.serde_with]
version = "1.5.0-alpha.2"
features = [ "macros" ]

[dev-dependencies]
pretty_assertions = "0.6.1"

