[package]
name = "hawkeye-core"
version = "0.1.0"
authors = ["Rafael Caricio <rafael@caricio.com>"]
edition = "2018"


[dependencies]
log = "0.4"
color-eyre = "0.5"
lazy_static = "1.4.0"
pretty_env_logger = "0.4.0"
sentry = "0.23.0"
sentry-log = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.serde_with]
version = "1.5.0-alpha.2"
features = [ "macros" ]

[dev-dependencies]
pretty_assertions = "0.6.1"

